统计页面添加滚动
统计页面添加滚动条，防止Piece数据太多导致数据显示不完整。

--- a/src/main/resources/fxml/setting.fxml
+++ b/src/main/resources/fxml/setting.fxml
@@ -11,7 +11,7 @@
 	fx:controller="com.acgist.snail.gui.setting.SettingController"
 	xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
 	
-	<ScrollPane fx:id="scrollPane" hbarPolicy="AS_NEEDED">
+	<ScrollPane fx:id="scrollPane" vbarPolicy="AS_NEEDED" hbarPolicy="NEVER">
 		<VBox>
 			<HBox styleClass="path">
 				<TextFlow styleClass="name">
