--- a/src/main/resources/style/fxml.css
+++ b/src/main/resources/style/fxml.css
@@ -303,6 +303,10 @@
 .statistics .info-box .tabs Button {
 	-fx-pref-width:130px;
 }
+.statistics .scroll-pane {
+	-fx-padding:0;
+	-fx-background-color:transparent;
+}
 .statistics .statistics-box {
 	-fx-pref-width:800px;
 	-fx-pref-height:400px;
