--- a/snail-javafx/src/main/resources/fxml/statistics.fxml
+++ b/snail-javafx/src/main/resources/fxml/statistics.fxml
@@ -8,7 +8,7 @@
 <FlowPane
 	fx:id="root"
 	styleClass="root,statistics" stylesheets="@/style/fxml.css"
-	fx:controller="com.acgist.snail.gui.statistics.StatisticsController"
+	fx:controller="com.acgist.snail.gui.javafx.statistics.StatisticsController"
 	xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
 	
 	<VBox styleClass="info-box">
