--- a/snail-javafx/src/main/resources/fxml/build.fxml
+++ b/snail-javafx/src/main/resources/fxml/build.fxml
@@ -8,7 +8,7 @@
 <FlowPane
 	fx:id="root"
 	styleClass="root,build" stylesheets="@/style/fxml.css"
-	fx:controller="com.acgist.snail.gui.build.BuildController"
+	fx:controller="com.acgist.snail.gui.javafx.build.BuildController"
 	xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
 
 	<VBox>
