--- a/snail-javafx/src/main/resources/fxml/setting.fxml
+++ b/snail-javafx/src/main/resources/fxml/setting.fxml
@@ -8,7 +8,7 @@
 <FlowPane
 	fx:id="root"
 	styleClass="root,setting" stylesheets="@/style/fxml.css"
-	fx:controller="com.acgist.snail.gui.setting.SettingController"
+	fx:controller="com.acgist.snail.gui.javafx.setting.SettingController"
 	xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
 	
 	<ScrollPane fx:id="scrollPane" vbarPolicy="AS_NEEDED" hbarPolicy="NEVER">
