--- a/snail-javafx/src/main/resources/fxml/about.fxml
+++ b/snail-javafx/src/main/resources/fxml/about.fxml
@@ -7,43 +7,44 @@
 
 <GridPane
 	fx:id="root"
-	hgap="7" vgap="3"
+	hgap="7" vgap="4"
 	styleClass="root,about" stylesheets="@/style/fxml.css"
 	fx:controller="com.acgist.snail.gui.javafx.about.AboutController"
 	xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
 
-	<TextFlow GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.columnSpan="3">
+	<TextFlow GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.columnSpan="4">
 		<Label>软件名称：</Label>
 		<Text fx:id="name">蜗牛（Snail）</Text>
 	</TextFlow>
 
-	<TextFlow GridPane.columnIndex="0" GridPane.rowIndex="1" GridPane.columnSpan="3">
+	<TextFlow GridPane.columnIndex="0" GridPane.rowIndex="1" GridPane.columnSpan="4">
 		<Label>软件版本：</Label>
 		<Text fx:id="version">1.0.0</Text>
 	</TextFlow>
 	
-	<TextFlow GridPane.columnIndex="0" GridPane.rowIndex="2" GridPane.columnSpan="3">
+	<TextFlow GridPane.columnIndex="0" GridPane.rowIndex="2" GridPane.columnSpan="4">
 		<Label>开发语言：</Label>
 		<Text>Java</Text>
 	</TextFlow>
 	
-	<TextFlow GridPane.columnIndex="0" GridPane.rowIndex="3" GridPane.columnSpan="3">
+	<TextFlow GridPane.columnIndex="0" GridPane.rowIndex="3" GridPane.columnSpan="4">
 		<Label>GUI框架：</Label>
 		<Text>JavaFX</Text>
 	</TextFlow>
 	
-	<TextFlow GridPane.columnIndex="0" GridPane.rowIndex="4" GridPane.columnSpan="3">
+	<TextFlow GridPane.columnIndex="0" GridPane.rowIndex="4" GridPane.columnSpan="4">
 		<Label>开源协议：</Label>
 		<Text>Apache-2.0</Text>
 	</TextFlow>
 	
-	<TextFlow GridPane.columnIndex="0" GridPane.rowIndex="5" GridPane.columnSpan="3">
+	<TextFlow GridPane.columnIndex="0" GridPane.rowIndex="5" GridPane.columnSpan="4">
 		<Label>下载协议：</Label>
-		<Text>BT（BitTorrent）、FTP、HTTP</Text>
+		<Text>BT（BitTorrent）、HLS、FTP、HTTP</Text>
 	</TextFlow>
 	
 	<Button fx:id="author" text="作者" onAction="#handleAuthorAction" GridPane.columnIndex="0" GridPane.rowIndex="6" />
-	<Button fx:id="source" text="官网与源码" onAction="#handleSourceAction" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-	<Button fx:id="support" text="问题与建议" onAction="#handleSupportAction" GridPane.columnIndex="2" GridPane.rowIndex="6" />
-	
+	<Button fx:id="update" text="检测更新" onAction="#handleUpdateAction" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+	<Button fx:id="source" text="官网与源码" onAction="#handleSourceAction" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+	<Button fx:id="support" text="问题与建议" onAction="#handleSupportAction" GridPane.columnIndex="3" GridPane.rowIndex="6" />
+
 </GridPane>
