添加客户端类型统计

--- a/snail-javafx/src/main/resources/fxml/statistics.fxml
+++ b/snail-javafx/src/main/resources/fxml/statistics.fxml
@@ -26,6 +26,7 @@
 			<Button fx:id="system" text="系统信息" onAction="#handleSystemAction" />
 			<Button fx:id="node" text="节点统计"  onAction="#handleNodeAction" />
 			<Button fx:id="tracker" text="Tracker统计" onAction="#handleTrackerAction" />
+			<Button fx:id="client" text="客户端统计" onAction="#handleClientAction" />
 		</HBox>
 		<HBox fx:id="infoHashTabs" styleClass="tabs">
 			<ChoiceBox fx:id="selectInfoHashs"></ChoiceBox>
