删除任务文件改为用户配置

--- a/snail-javafx/src/main/resources/fxml/setting.fxml
+++ b/snail-javafx/src/main/resources/fxml/setting.fxml
@@ -48,6 +48,13 @@
 				</TextFlow>
 				<CheckBox fx:id="notice" onAction="#handleNoticeAction" />
 			</HBox>
+				
+			<HBox>
+				<TextFlow>
+					<Label>删除文件：</Label>
+				</TextFlow>
+				<CheckBox fx:id="delete" onAction="#handleDeleteAction" />
+			</HBox>
 		</VBox>
 	</ScrollPane>
 	
