添加整理内存按钮

--- a/snail-javafx/src/main/resources/fxml/statistics.fxml
+++ b/snail-javafx/src/main/resources/fxml/statistics.fxml
@@ -31,6 +31,7 @@
 		<HBox fx:id="infoHashTabs" styleClass="tabs">
 			<ChoiceBox fx:id="selectInfoHashs"></ChoiceBox>
 			<Button fx:id="refresh" text="刷新" onAction="#handleRefreshAction" />
+			<Button fx:id="memory" text="整理内存" onAction="#handleMemoryAction" />
 		</HBox>
 		<HBox fx:id="torrentTabs" styleClass="tabs">
 			<Button fx:id="source" text="来源统计" onAction="#handleSourceAction" />
